<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_nav"
    tools:context=".pagina1">


    <TextView
        android:id="@+id/title_pg1"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/titulo_pg1"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />




    <View
        android:id="@+id/container_moedas"
        style="@style/container_moedas"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_pg1"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/moedas_dolar"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/dolar"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container_moedas" />




    <TextView
        android:id="@+id/moedas_euro"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/euro"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/moedas_dolar"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/moedas_libra"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/libra"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/moedas_euro"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/moedas_real"
        style="@style/ContainerTitulo_pg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/real"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/moedas_libra"
        tools:ignore="MissingConstraints" />


    <View
        android:id="@+id/header_title"
        style="@style/Container_header_nav"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:importantForAccessibility="no"
        android:src="@drawable/bitcoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="28dp" />


    <TextView
        android:id="@+id/toolbar_title"
        style="@style/ContainerTitulo_nav"
        android:layout_marginTop="-4dp"
        android:gravity="center"
        android:text="@string/saudacao_pg1"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cotacao"
        style="@style/Button_menor"
        android:layout_marginTop="40dp"
        android:text="@string/cotacao"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_moedas" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sair"
        style="@style/Button_menor"
        android:layout_marginTop="32dp"
        android:text="@string/sair"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cotacao" />




</androidx.constraintlayout.widget.ConstraintLayout>
